<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ll_home_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_2"
            android:src="@mipmap/home_selected_false" />

        <TextView
            android:id="@+id/ll_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/main_bottom_home"
            android:textColor="@color/main_bottom_textColor"
            android:textSize="@dimen/sp_11" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ll_category_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_2"
            android:src="@mipmap/ex_selected_false" />

        <TextView
            android:id="@+id/ll_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/main_bottom_ex"
            android:textColor="@color/main_bottom_textColor"
            android:textSize="@dimen/sp_11" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ll_service_iamge"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_2"
            android:src="@mipmap/shop_selected_false" />

        <TextView
            android:id="@+id/ll_service_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/main_bottom_shop"
            android:textColor="@color/main_bottom_textColor"
            android:textSize="@dimen/sp_11" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ll_mine_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_2"
            android:src="@mipmap/mine_selected_false" />

        <TextView
            android:id="@+id/ll_mine_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:text="@string/main_bottom_mine"
            android:textColor="@color/main_bottom_textColor"
            android:textSize="@dimen/sp_11" />
    </LinearLayout>
</LinearLayout>