<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/mine_name" />


        <com.maning.library.MClearEditText
            android:id="@+id/item_personal_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_91"
            android:cursorVisible="true"
            android:hint="请输入孩子姓名"
            android:textColor="@color/home_bar_serch"
            android:textCursorDrawable="@drawable/exit_color"
            android:textSize="@dimen/sp_12"
            app:mClearEditText_showBottomLine="false" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/main_line_view"></View>


    <RelativeLayout
        android:id="@+id/item_chlid_sex_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/mine_sex" />

        <TextView
            android:id="@+id/item_chlid_sex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_91"
            android:gravity="center_vertical"
            android:text="@string/mine_sex" />

        <ImageView
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/good_detail_go_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/main_line_view"></View>

    <RelativeLayout
        android:id="@+id/item_chlid_brith_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_43"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/mine_brith" />

        <TextView
            android:id="@+id/item_chlid_brith"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_91"
            android:gravity="center_vertical"
            android:text="@string/mine_brith" />

        <ImageView
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"

            android:background="@mipmap/good_detail_go_right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_children_del_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/mine_children_data_del" />

    </RelativeLayout>


</LinearLayout>