<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_tab_type_nume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_2"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/login_num"
                android:textColor="@color/common_text_color_1"
                android:textSize="@dimen/sp_14" />


            <com.maning.library.MClearEditText
                android:id="@+id/login_account_edit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:drawablePadding="10dp"
                android:hint="@string/login_num_et"
                android:paddingLeft="@dimen/dp_12"
                android:textColor="@color/home_bar_serch"
                android:textSize="@dimen/sp_14"

                app:mClearEditText_showBottomLine="false" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/common_text_color_9">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_2"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/login_pas"
                android:textColor="@color/common_text_color_1"
                android:textSize="@dimen/sp_14" />


            <com.maning.library.MClearEditText
                android:id="@+id/login_password_edit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:drawablePadding="10dp"
                android:hint="@string/login_pas_ex"
                android:paddingLeft="@dimen/dp_12"
                android:textColor="@color/home_bar_serch"
                android:textSize="@dimen/sp_14"
                app:mClearEditText_showBottomLine="false" />


            <RelativeLayout
                android:id="@+id/isShow_password_rl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/isShow_password_image"
                    android:layout_width="@dimen/dp_23"
                    android:layout_height="@dimen/dp_14"
                    android:layout_centerInParent="true"
                    android:background="@drawable/password_selected" />
            </RelativeLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/common_text_color_9">

        </View>

        <TextView
            android:id="@+id/login_forget_pas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/login_forget_pas"
            android:textSize="@dimen/sp_14" />

        <RelativeLayout
            android:id="@+id/login_go_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_38"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/shape_login_button">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_title"
                android:textColor="#111111"
                android:textSize="@dimen/sp_15" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="登录即代表同意"
                    android:textColor="#111111"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/agreement_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《熊猫成长季协议》"
                    android:textColor="#f8d748"
                    android:textSize="@dimen/sp_11" />
            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0_5"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/common_text_color_9">

            </View>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginRight="@dimen/dp_7"
                android:layout_weight="0"
                android:text="@string/login_type_text" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0_5"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/common_text_color_9">

            </View>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_90"
            android:layout_marginRight="@dimen/dp_90"
            android:layout_marginTop="@dimen/dp_21"
            android:orientation="horizontal"
            android:padding="@dimen/dp_2">


            <ImageView
                android:id="@+id/login_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp_1"
                android:src="@mipmap/login_weixin" />


            <ImageView
                android:id="@+id/login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/login_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp_1"
                android:src="@mipmap/login_weibo" />
        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/phone_login_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_38"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginRight="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/shape_login_register">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_phone_register"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>
</LinearLayout>


