<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.padacn.xmgoing.view.CustomToolBar
        android:id="@+id/about_us_comment_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">

    </com.padacn.xmgoing.view.CustomToolBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.gcssloop.widget.RCRelativeLayout
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_40"
            app:round_corner="@dimen/dp_10">

            <ImageView
                android:id="@+id/about_image"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:background="@mipmap/default_image" />
        </com.gcssloop.widget.RCRelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前版本:"
                android:textColor="@color/common_text_color_1"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/version_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <TextView
            android:id="@+id/adbout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_40"
            android:lineSpacingExtra="@dimen/dp_10"
            android:text="@string/app_contant"
            android:textColor="@color/common_text_color_1"
            android:textSize="@dimen/dp_14" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_marking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_bottom_contant_1"
            android:textColor="@color/common_text_color_6"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/app_bottom_contant_2"
            android:textColor="@color/common_text_color_6"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>


</LinearLayout>